code/typescript/CompanyLogoAPIforDigitalPortals/v2/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Company Logo API for Digital Portals client library for JavaScript

[![npm](https://img.shields.io/npm/v/@factset/sdk-companylogoapifordigitalportals)](https://www.npmjs.com/package/@factset/sdk-companylogoapifordigitalportals)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)

This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v1
- Package version: 0.9.4
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen

## Requirements

* Node.js >= 14

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-companylogoapifordigitalportals
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-companylogoapifordigitalportals
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=14. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 16
      nvm use 16
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:

```javascript
const { ApiClient, CompanyApi } = require('@factset/sdk-companylogoapifordigitalportals');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new CompanyApi();
const id = "id_example"; // String | Identifier of an instrument.
const opts = {
  'attributes': ["null"] // [String] | Limit the attributes returned in the response to the specified set.
};

// Call api endpoint
apiInstance.getCompanyLogoGetByInstrument(id, opts).then(
  data => {

    console.log('API called successfully. Returned data:');
    console.log(data);
  },
  error => {
    console.error(error);
  },
);

```


## Documentation for API Endpoints

All URIs are relative to *http://api.factset.com/wealth/v1*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*companylogoapifordigitalportals.CompanyApi* | [**getCompanyLogoGetByInstrument**](docs/CompanyApi.md#getCompanyLogoGetByInstrument) | **GET** /company/logo/getByInstrument | URLs of company logos.


## Documentation for Models

 - [companylogoapifordigitalportals.CursorBasedPaginationOutputObject](docs/CursorBasedPaginationOutputObject.md)
 - [companylogoapifordigitalportals.CursorBasedPaginationOutputObjectWithoutTotal](docs/CursorBasedPaginationOutputObjectWithoutTotal.md)
 - [companylogoapifordigitalportals.ErrorMetaObject](docs/ErrorMetaObject.md)
 - [companylogoapifordigitalportals.InlineResponse200](docs/InlineResponse200.md)
 - [companylogoapifordigitalportals.InlineResponse200Data](docs/InlineResponse200Data.md)
 - [companylogoapifordigitalportals.InlineResponse200DataLarge](docs/InlineResponse200DataLarge.md)
 - [companylogoapifordigitalportals.InlineResponse200DataMedium](docs/InlineResponse200DataMedium.md)
 - [companylogoapifordigitalportals.InlineResponse200DataSmall](docs/InlineResponse200DataSmall.md)
 - [companylogoapifordigitalportals.InlineResponse200DataVector](docs/InlineResponse200DataVector.md)
 - [companylogoapifordigitalportals.InlineResponse200Meta](docs/InlineResponse200Meta.md)
 - [companylogoapifordigitalportals.OffsetBasedPaginationOutputObject](docs/OffsetBasedPaginationOutputObject.md)
 - [companylogoapifordigitalportals.OffsetBasedPaginationOutputObjectWithoutTotal](docs/OffsetBasedPaginationOutputObjectWithoutTotal.md)
 - [companylogoapifordigitalportals.PartialOutputObject](docs/PartialOutputObject.md)
 - [companylogoapifordigitalportals.StatusObject](docs/StatusObject.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
