code/typescript/CompanyLogoAPIforDigitalPortals/v3/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Company Logo API for Digital Portals client library for JavaScript

[![API Version](https://img.shields.io/badge/api-v2-blue)]()
[![npm](https://img.shields.io/npm/v/@factset/sdk-companylogoapifordigitalportals)](https://www.npmjs.com/package/@factset/sdk-companylogoapifordigitalportals)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Consume FactSet-collected company logos through an API that seamlessly integrates with company fundamentals and estimates data (listed equities data available via the stocks API), quotes, time series, and other Functional APIs.

This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2
- SDK version: 0.10.6
- Build package: com.factset.sdk.codegen.FactSetJavascriptClientCodegen

## Requirements

* Node.js >= 14

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-companylogoapifordigitalportals@0.10.6
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-companylogoapifordigitalportals@0.10.6
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=14. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 16
      nvm use 16
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code


```javascript
const { ApiClient, CompanyApi } = require('@factset/sdk-companylogoapifordigitalportals');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
//
// The confidential client instance should be reused in production environments.
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new CompanyApi();
const identifier = "identifier_example"; // String | Identifier that resolves to a company. 
const identifierType = "identifierType_example"; // String | The type of the identifier.
const opts = {
  'format': "'rectangular'", // String | Format of the logos.
  'attributes': ["null"] // [String] | Limit the attributes returned in the response to the specified set.
};

// Call api endpoint
apiInstance.getCompanyLogoGet(identifier, identifierType, opts).then(
  data => {

    console.log('API called successfully. Returned data:');
    console.log(data);
  },
  error => {
    console.error(error);
  },
);

```


## Documentation for API Endpoints

All URIs are relative to *http://api.factset.com/wealth/v1*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*companylogoapifordigitalportals.CompanyApi* | [**getCompanyLogoGet**](docs/CompanyApi.md#getCompanyLogoGet) | **GET** /company/logo/get | List of URLs of company logos.


## Documentation for Models

 - [companylogoapifordigitalportals.CursorBasedPaginationOutputObject](docs/CursorBasedPaginationOutputObject.md)
 - [companylogoapifordigitalportals.CursorBasedPaginationOutputObjectWithoutTotal](docs/CursorBasedPaginationOutputObjectWithoutTotal.md)
 - [companylogoapifordigitalportals.ErrorMetaObject](docs/ErrorMetaObject.md)
 - [companylogoapifordigitalportals.InlineResponse200](docs/InlineResponse200.md)
 - [companylogoapifordigitalportals.InlineResponse200Data](docs/InlineResponse200Data.md)
 - [companylogoapifordigitalportals.InlineResponse200DataLarge](docs/InlineResponse200DataLarge.md)
 - [companylogoapifordigitalportals.InlineResponse200DataMedium](docs/InlineResponse200DataMedium.md)
 - [companylogoapifordigitalportals.InlineResponse200DataSmall](docs/InlineResponse200DataSmall.md)
 - [companylogoapifordigitalportals.InlineResponse200DataVector](docs/InlineResponse200DataVector.md)
 - [companylogoapifordigitalportals.InlineResponse200Meta](docs/InlineResponse200Meta.md)
 - [companylogoapifordigitalportals.OffsetBasedPaginationOutputObject](docs/OffsetBasedPaginationOutputObject.md)
 - [companylogoapifordigitalportals.OffsetBasedPaginationOutputObjectWithoutTotal](docs/OffsetBasedPaginationOutputObjectWithoutTotal.md)
 - [companylogoapifordigitalportals.PartialOutputObject](docs/PartialOutputObject.md)
 - [companylogoapifordigitalportals.StatusObject](docs/StatusObject.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
